django 1.8.3 & grappelli 2.7.1 update
Signed-off-by: quijoT <santiagonob@gmail.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
 recursive-include docs *
+recursive-include gea/backup/db
 recursive-include gea/templates *.html
+include requirements.txt
 include AUTHORS
 include LICENSE
 include README.rst
