--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ black = "^19.10b0"
 ipython = "^7.13.0"
 pydot = "^1.4.1"
 psycopg2 = "^2.8.5"
+dj_database_url = "^0.5.0"
+gunicorn = "^20.0.4"
+whitenoise = "^5.0.1"
 
 [tool.black]
 line-length = 88
