--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "gea"
-version = "0.2.40"
-description = "Gestión de Expedientes de Agrimensores para Django."
+version = "0.2.50"
+description = "Gestión de Expedientes de Agrimensores"
 authors = ["Santiago Pestarini <santiagonob@gmail.com>"]
 license = "MIT"
 readme = "README.md"
@@ -13,6 +13,7 @@ python = ">=3.6,<4"
 django = "^3.1.5"
 django-nested-admin = "^3.3.0"
 django-extensions = "^2.2.9"
+django-crispy-forms = "^1.11.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
