--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [{ include = "gea" }]
 
 [tool.poetry.dependencies]
 python = ">=3.6,<4"
-django = "^3.1.5"
+Django = "^3.1.7"
 django-nested-admin = "^3.3.0"
 django-extensions = "^2.2.9"
 django-crispy-forms = "^1.11.2"
